--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,10 @@ enabled = true
 local = true
 src = "img/avatar.png"
 
+[params.series]
+enabled = true
+orderByWeight = true  # 启用 series_weight 排序
+
 [params.article]
 math = true
 toc = true
@@ -56,21 +60,6 @@ weight = -100
 [menu.main.params]
 icon = "home"
 
-[[menu.main]]
-identifier = "archives"
-name = "归档"
-url = "/archives"
-weight = -90
-[menu.main.params]
-icon = "archives"
-
-[[menu.main]]
-identifier = "search"
-name = "搜索"
-url = "/search"
-weight = -80
-[menu.main.params]
-icon = "search"
 
 [taxonomies]
 tag = "tags"
